# handlers/transaction_handler.go
@@ -114,6 +114,32 @@ func (h *TransactionHandler) GetTransaction(c *fiber.Ctx) error {
 // @Param request body dto.UpdateTransactionRequest true "Transaction Update Request"
 // @Success 200 {object} helpers.Response{data=dto.TransactionResponse}
 // @Router /transactions/{id} [put]
+// GetTransactionsByBusinessId
+// @Summary Mendapatkan detail transaksi berdasarkan Business ID
+// @Description Mengambil kumpulan transaksi menggunakan Business ID
+// @Tags transactions
+// @Produce json
+// @Security BearerAuth
+// @Param id path int true "Business ID"
+// @Success 200 {object} helpers.Response{data=[]dto.TransactionResponse}
+// @Router /transactions/business/{id} [get]
+func (h *TransactionHandler) GetTransactionsByBusinessId(c *fiber.Ctx) error {
+	id, err := strconv.ParseUint(c.Params("id"), 10, 32)
+	if err != nil {
+		return helpers.ErrorResponse(c, fiber.StatusBadRequest, "invalid business id")
+	}
+
+	transactions, err := h.service.GetTransactionsByBusinessId(uint(id))
+	if err != nil {
+		return helpers.ErrorResponse(c, fiber.StatusNotFound, "transactions not found")
+	}
+
+	var resp []dto.TransactionResponse
+	copier.Copy(&resp, &transactions)
+
+	return helpers.SuccessResponse(c, fiber.StatusOK, "transactions fetched", resp)
+}
+
 func (h *TransactionHandler) UpdateTransaction(c *fiber.Ctx) error {
 	id, err := strconv.ParseUint(c.Params("id"), 10, 32)
 	if err != nil {
